# socketio-rs

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs  parser.rs
src/enums/: connection.rs  mod.rs  packet.rs  protocol.rs
src/socket/: builder.rs  mod.rs
src/structs/: handshake.rs  message.rs  mod.rs  reconnect.rs
src/util/: base64.rs  mod.rs
src/util/proxy/: inner.rs  mod.rs  stream.rs
