[package]
name = "socketio"
version = "0.1.1"
authors = ["WeirdPtr <WeirdPtr@WeirdPtr.com>"]
description = "Socket.io v2 client for Rust"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WeirdPtr/csgoempire-rs"
keywords = ["websocket", "socket.io"]
include = ["src/**/*", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]
exclude = ["src/main.rs"]

[dependencies]
futures-util = "0.3.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = { version = "2.4.1", optional = true }
base64 = { version = "0.21.5", optional = true }

[features]
default = []
full = ["proxy"]
proxy = ["url", "base64"]
